Archivos .json (Postman) y .jmx (JMeter) subidos + ReadMe actualizado

--- a/README.me
+++ b/README.me
@@ -1,1 +1,15 @@
-# Tarea preubas de carga
+# Tarea pruebas de carga y estrés
+
+## Iniciar aplicación
+#### npm init
+#### npm start
+
+## Variables de entorno en archivo .env
+#### PORT= Puerto el cual ocupará la aplicación (3000 por defecto)
+#### MONGO_URI= Dirección donde está alojada la base de datos MongoDB
+
+## Observaciones
+
+- Para conectarse a la base de datos se debe crear una base de datos en Mongo Atlas (nube) o en Mongo Compose (local), con lo cual se debe colocar la dirección de la base de datos en el archivo .env que se debe crear.
+
+- Dentro de la carpeta **performence_tests** se encuentran los archivos con con los cuales se realizaron las pruebas de carga (Postman en archivo .json) y las pruebas de estrés (JMeter en archivo .jmx).
